<resources>
    <string name="app_name">دریادلان</string>

    <string name="title_activity_wellcome">WellcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mobile_number">شماره تلفن همراه</string>
    <string name="personel_number">شماره پرسنلی</string>
    <string name="send_sms">ارسال کد فعال سازی</string>
    <string name="logged_in_before">قبلا ثبت نام نموده ام</string>
    <string name="login_member">ورود کاربر</string>
    <string name="guest">کاربر مهمان</string>
    <string name="im_not_retired">بازنشسته نیستم</string>
    <string name="login">ورود</string>
    <string name="password">رمز عبور</string>
    <string name="title_activity_main"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="wrapper_error">خطایی با این پیام رخ داده است: </string>
    <string name="please_enter_variable">لطفا %1$s وارد نمایید</string>
    <string name="is_not_valid_value">مقدار %1$s صحیح نیست</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">بستن</string>
    <string name="action_yes">بلی</string>
    <string name="search">جستجو</string>
    <string name="apply_code">کد تایید</string>
    <string name="retry">تلاش مجدد</string>
    <string name="sms_validate">تایید شماره موبایل</string>
    <string name="error_Verification_code">کد تایید نامعتبر!</string>
    <string name="title_activity_create_user">ایجاد کاربر</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="wanna_exit">مایل به بستن صفحه میباشید؟</string>
    <string name="repeat_password">تکرار کلمه عبور</string>
    <string name="error_pass_repeatPass">مقدار کلمه عبور و تکرار کلمه عبور یکسان نمیباشد</string>
    <string name="please_waite">لطفا کمی صبر کنید...</string>
    <string name="server_token_eror">token نا معتبر</string>
    <string name="server_mobile_eror">موبایل نا معتبر</string>
    <string name="server_firstName_eror">نام نا معتبر</string>
    <string name="server_lastName_eror">نام خانوادگی نا معتبر</string>
    <string name="error_login_please_try_again">متاسفانه خطایی هتگام ورود رخ داده است. لطفا مجددا تلاش نمایید</string>
    <string name="error_getting_data_please_try_again">متاسفانه خطایی هتگام دریافت اطلاعات رخ داده است. لطفا مجددا تلاش نمایید</string>
    <string name="exit_app">خروج از حساب کاربری</string>
    <string name="about_us">درباره ما</string>
    <string name="payslip">فیش حقوقی</string>
    <string name="i_am_guest">کاربر مهمان هستم</string>
    <string name="payroll">فیش حقوقی</string>
    <string name="title_activity_payroll_header">فیش حقوقی</string>
    <string name="year">سال</string>
    <string name="month">ماه</string>
    <string name="get_payroll">دریافت فیش حقوقی</string>
    <string name="title_activity_payroll_footer">دریافت فیش حقوقی</string>
    <string name="sandogh_title">صندوق بازنشستگی سازمان بنادر و دریانوردی</string>
    <string name="doble_tap_to_exit">جهت خروج مجددا کلید بازگشت را لمس نمایید</string>
    <string name="error_exit_app">خطا در خروج از برنامه، لظفا مجددا تلاش نمایید</string>
    <string name="details">توضیحات</string>
    <string name="price">مبلغ</string>
    <string name="type">نوع</string>
    <string name="title_activity_ahkam_header">احکام</string>
    <string name="ahkam">احکام</string>
    <string name="get_hokms">دریافت احکام</string>
    <string name="title_activity_ahkam_footer">AhkamFooterActivity</string>
    <string name="quick_shortcut">دسترسی سریع</string>
    <string name="item_details">شرح آیتم</string>
    <string name="title_activity_opened_news">OpenedNewsActivity</string>
    <string name="title_activity_news">خبرها</string>
    <string name="title_activity_galleries">آلبوم تصاویر</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="copywright"> © تمامی حقوق این اپلیکیشن نزد   صندوق بازنشستگی سازمان بنادر و دریانوردی محفوظ است </string>
    <string name="nationalcode">کد ملی</string>
    <string name="photo_album">آلبوم تصاویر</string>
    <string name="news">اخبار و اطلاعیه ها</string>
    <string name="camps">هتل ها و مکان های اقامتی</string>
    <string name="connect_to_sandogh">ارتباط با صندوق</string>
    <string name="title_activity_camps">هتل ها و مکان های اقامتی</string>
    <string name="title_activity_camp">CampActivity</string>
    <string name="title_activity_camps_requests_history">درخواست های ثبت شده</string>
    <string name="title_activity_confirm_camp">ConfirmCampActivity</string>
    <string name="name_lbl">نام:</string>
    <string name="family_lbl">نام خانوادگی:</string>
    <string name="national_code_lbl">کد ملی:</string>
    <string name="relation_lbl">نسبت:</string>
    <string name="relation">نسبت</string>
    <string name="persons_count">تعداد نفرات</string>
    <string name="title_activity_confirmed_camp_history">ConfirmedCampHistoryActivity</string>
    <string name="add_new_request">افزودن درخواست جدید</string>
    <string name="sandogh_full_name">صندوق بازنشستگی و وظیفه مستخدمین سازمان بنادر و دریانوردی</string>
    <string name="title_activity_conversation_header">مدیریت پیام ها</string>
    <string name="title_activity_conversation_footer">ConversationFooterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
