<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_hokm"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/ahkam" />


        <item
            android:id="@+id/nav_payroll"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/payroll" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/title_activity_news" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_photo_album_black_24dp"
            android:title="آلبوم تصاویر" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit_app" />


    </group>


</menu>
