<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:alpha="0.8"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:visibility="visible"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_daryadelan_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="10dp"
            android:id="@+id/txtUserFullName"
            android:textColor="@color/colorBlack"
            android:text="@string/sandogh_title"
            android:alpha="0.7"
            android:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>



</RelativeLayout>
