<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PayrollFooterActivity"
    tools:showIn="@layout/activity_payroll_footer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lyHeader"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/type"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/very_small_10" />


            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:text="@string/details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/very_small_10" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray" />


            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/price"
                    android:maxLines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/very_small_10" />

            </LinearLayout>


        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rtItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="50dp">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <include layout="@layout/layout_progress_match_parent" />

</RelativeLayout>