<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lyRoot"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/colorGray"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/name_lbl"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/edtName"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:alpha="0.4"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/family_lbl"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />

            <TextView
                android:id="@+id/edtFamily"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:alpha="0.4"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_credit_card_black_24dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/national_code_lbl"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/edtNationalCode"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:alpha="0.4"
            android:background="@color/colorBlack" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_supervisor_account_black_24dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/relation_lbl"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/edtRelation"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/very_small_font_size" />


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>